--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,6 @@ python-dotenv>=1.0.0,<2.0.0
 tiktoken>=0.5.0,<1.0.0
 pydantic-settings>=2.0.0,<3.0.0
 slowapi>=0.1.9,<1.0.0
+itsdangerous>=2.0.0,<3.0.0
+python-multipart>=0.0.6,<1.0.0
+cryptography>=41.0.0,<44.0.0
